12/2
将死机制，飞将检测，AI推荐，AI开关，联机模式按钮