@@ -32,67 +32,59 @@ import java.io.*;
 import java.util.ArrayList;
 import java.util.List;
 import edu.sustech.xiangqi.manager.UserManager;
-import javafx.scene.control.PasswordField;
-import javafx.scene.control.TextField;
+import javafx.util.Duration;
+
 import static com.almasb.fxgl.dsl.FXGL.*;
 
 public class XiangQiApp extends GameApplication {
 
-    // --- 常量定义 ---
     public static final int CELL_SIZE = 90;
     public static final int MARGIN = 31;
     public static final int UI_GAP = 60;
     public static final int UI_WIDTH = 180;
-
     public static final int BOARD_WIDTH = 796;
     public static final int BOARD_HEIGHT = 887;
-
     public static final int APP_WIDTH = UI_WIDTH + UI_GAP + BOARD_WIDTH + UI_GAP + UI_WIDTH + 40;
     public static final int APP_HEIGHT = BOARD_HEIGHT + 120;
-
     public static final double BOARD_START_X = (APP_WIDTH - BOARD_WIDTH) / 2.0;
     public static final double BOARD_START_Y = (APP_HEIGHT - BOARD_HEIGHT) / 2.0;
-
-    // 微调偏移量
     public static final int PIECE_OFFSET_X = 5;
     public static final int PIECE_OFFSET_Y = 5;
 
-    // 文本提示
     private Text gameOverBanner;
     private Rectangle gameOverDimmingRect;
     private TurnIndicator turnIndicator;
     private Font gameFont;
 
-    // --- 状态变量 ---
     private boolean isCustomMode = false;
     private boolean isSettingUp = false;
     private boolean isLoadedGame = false;
-
-    // 【新增】标记：是否正在重置排局（用于在 initGame 中区分）
     private boolean isRestartingCustom = false;
-    // 【新增】排局快照：用于存储点击“开始对局”前的棋盘状态
-    private ChessBoardModel customSetupSnapshot;
+    private boolean isOnlineLaunch = false;
+    private boolean isAIEnabled = false; // AI 开关
 
+    private ChessBoardModel customSetupSnapshot;
     private String selectedPieceType = null;
     private boolean selectedPieceIsRed = true;
 
-    // UI 容器引用
+    // UI 引用
     private VBox leftSetupPanel;
     private VBox rightSetupPanel;
     private VBox standardGameUI;
+    private VBox leftGameUI; // 【新增】左侧标准 UI (AI面板)
     private VBox turnSelectionPanel;
 
     private ChessBoardModel model;
     private boardController boardController;
     private InputHandler inputHandler;
-    // 【新增】用户管理器
     private UserManager userManager;
     private String currentUser = "Guest";
     private boolean isGuestMode = true;
-    //储存地址
     private static final String SAVE_DIR = "saves/";
 
     // --- Getters & Setters ---
+    public void setOnlineLaunch(boolean isOnline) { this.isOnlineLaunch = isOnline; }
+    public boolean isOnlineLaunch() { return isOnlineLaunch; }
     public Text getGameOverBanner() { return gameOverBanner; }
     public Rectangle getGameOverDimmingRect() { return gameOverDimmingRect; }
     public void setCustomMode(boolean customMode) { this.isCustomMode = customMode; }
@@ -102,42 +94,27 @@ public class XiangQiApp extends GameApplication {
     public boolean isSelectedPieceRed() { return selectedPieceIsRed; }
     public ChessBoardModel getModel() { return model; }
     public TurnIndicator getTurnIndicator() { return turnIndicator; }
+    public InputHandler getInputHandler() { return inputHandler; }
     public UserManager getUserManager() { return userManager; }
     public String getCurrentUser() { return currentUser; }
     public boolean isGuest() { return isGuestMode; }
+    public boolean isAIEnabled() { return isAIEnabled; }
+
+    public void login(String username) { this.currentUser = username; this.isGuestMode = false; }
+    public void loginAsGuest() { this.currentUser = "Guest"; this.isGuestMode = true; }
 
     public void centerTextInApp(Text text) {
         double textWidth = text.getLayoutBounds().getWidth();
         double textHeight = text.getLayoutBounds().getHeight();
-        double centerX = (APP_WIDTH - textWidth) / 2;
-        double centerY = (APP_HEIGHT - textHeight) / 2 + text.getFont().getSize() * 0.3;
-        text.setTranslateX(centerX);
-        text.setTranslateY(centerY);
-    }
-
-    // 【新增】登录方法，供 UI 调用
-    public void login(String username) {
-        this.currentUser = username;
-        this.isGuestMode = false;
-    }
-
-    // 【新增】游客登录方法
-    public void loginAsGuest() {
-        this.currentUser = "Guest";
-        this.isGuestMode = true;
+        text.setTranslateX((APP_WIDTH - textWidth) / 2);
+        text.setTranslateY((APP_HEIGHT - textHeight) / 2 + text.getFont().getSize() * 0.3);
     }
 
     public static Point2D getVisualPosition(int row, int col) {
-        double centerX = BOARD_START_X + MARGIN + col * CELL_SIZE;
-        double centerY = BOARD_START_Y + MARGIN + row * CELL_SIZE;
-
-        centerX += PIECE_OFFSET_X;
-        centerY += PIECE_OFFSET_Y;
-
+        double centerX = BOARD_START_X + MARGIN + col * CELL_SIZE + PIECE_OFFSET_X;
+        double centerY = BOARD_START_Y + MARGIN + row * CELL_SIZE + PIECE_OFFSET_Y;
         double pieceRadius = (CELL_SIZE - 8) / 2.0;
-        double topLeftX = centerX - pieceRadius;
-        double topLeftY = centerY - pieceRadius;
-        return new Point2D(topLeftX, topLeftY);
+        return new Point2D(centerX - pieceRadius, centerY - pieceRadius);
     }
 
     @Override
@@ -148,10 +125,8 @@ public class XiangQiApp extends GameApplication {
         settings.setHeight(APP_HEIGHT);
         settings.setMainMenuEnabled(true);
         settings.setSceneFactory(new SceneFactory() {
-            @Override
-            public FXGLMenu newMainMenu() { return new MainMenuScene(); }
-            @Override
-            public FXGLMenu newGameMenu() { return new InGameMenuScene(); }
+            @Override public FXGLMenu newMainMenu() { return new MainMenuScene(); }
+            @Override public FXGLMenu newGameMenu() { return new InGameMenuScene(); }
         });
     }
 
@@ -160,45 +135,35 @@ public class XiangQiApp extends GameApplication {
         try {
             gameFont = getAssetLoader().loadFont("HYPixel11pxU-2.ttf").newFont(20);
             userManager = new UserManager();
-        }
-        catch (Exception e) {
-            System.out.println("字体加载失败，使用默认字体");
+        } catch (Exception e) {
             gameFont = Font.font("System", FontWeight.BOLD, 20);
         }
     }
 
-    // --- 核心初始化逻辑 ---
     @Override
     protected void initGame() {
         getGameWorld().addEntityFactory(new XiangQiFactory());
 
-        // 1. 读档模式
         if (isLoadedGame) {
             isLoadedGame = false;
             if (this.model == null) this.model = new ChessBoardModel();
             isSettingUp = false;
-        }
-        // 2. 【新增】排局重置模式：恢复快照
-        else if (isRestartingCustom) {
+        } else if (isRestartingCustom) {
             isRestartingCustom = false;
-            // 从快照恢复 Model
             this.model = deepCopy(customSetupSnapshot);
-            // 恢复后，要把状态设回“设置中”，这样 UI 就会显示选择面板
             isSettingUp = true;
             selectedPieceType = null;
-        }
-        // 3. 全新游戏
-        else {
+        } else if (isOnlineLaunch) {
             this.model = new ChessBoardModel();
-
+            isCustomMode = false; isLoadedGame = false; isSettingUp = false;
+        } else {
+            this.model = new ChessBoardModel();
             if (isCustomMode) {
-                // 排局：清空
                 this.model.clearBoard();
                 isSettingUp = true;
                 selectedPieceType = null;
-                customSetupSnapshot = null; // 清空旧快照
+                customSetupSnapshot = null;
             } else {
-                // 标准：使用默认棋盘
                 isSettingUp = false;
             }
         }
@@ -209,404 +174,297 @@ public class XiangQiApp extends GameApplication {
         this.boardController = new boardController(this.model);
         this.inputHandler = new InputHandler(this.boardController);
 
-        // 如果不是在排局设置阶段，生成棋子
-        // 注意：如果是 RestartingCustom，这里 isSettingUp 为 true，所以不会生成棋子
-        // 而是等到 initSetupUI 显示后，通过 spawnPiecesFromModel 手动刷新或者用户点击刷新
-        // 但为了让用户看到之前的残局，我们在这里还是生成一次比较好
-        // 修正：排局设置阶段也需要显示棋子
         spawnPiecesFromModel();
     }
 
     public void spawnPiecesFromModel() {
         getGameWorld().getEntitiesByType(EntityType.PIECE).forEach(entity -> entity.removeFromWorld());
         for (AbstractPiece pieceLogic : model.getPieces()) {
-            String colorPrefix = pieceLogic.isRed() ? "Red" : "Black";
-            String pieceTypeName = pieceLogic.getClass().getSimpleName().replace("Piece", "");
-            String entityID = colorPrefix + pieceTypeName;
-            Point2D visualPos = getVisualPosition(pieceLogic.getRow(), pieceLogic.getCol());
-            spawn(entityID, new SpawnData(visualPos).put("pieceLogic", pieceLogic));
+            String prefix = pieceLogic.isRed() ? "Red" : "Black";
+            String type = pieceLogic.getClass().getSimpleName().replace("Piece", "");
+            Point2D pos = getVisualPosition(pieceLogic.getRow(), pieceLogic.getCol());
+            spawn(prefix + type, new SpawnData(pos).put("pieceLogic", pieceLogic));
         }
     }
 
-    // --- UI 初始化 ---
+    public void startOnlineConnection(String ip, String roomId, Text statusText) {
+        this.isOnlineLaunch = true;
+        this.setCustomMode(false);
+        this.setLoadedGame(false);
+        getGameController().startNewGame();
+        runOnce(() -> {
+            if (boardController != null) boardController.connectToRoom(ip, roomId);
+        }, Duration.seconds(0.1));
+    }
+
     @Override
     protected void initUI() {
+        // 清理旧 UI (特别是左侧)
+        if (leftGameUI != null) removeUINode(leftGameUI);
+
         gameOverDimmingRect = new Rectangle(APP_WIDTH, APP_HEIGHT, Color.web("000", 0.0));
         gameOverDimmingRect.setVisible(false);
         gameOverDimmingRect.setMouseTransparent(true);
+        addUINode(gameOverDimmingRect);
 
         gameOverBanner = new Text();
-        try {
-            gameOverBanner.setFont(getAssetLoader().loadFont("HYPixel11pxU-2.ttf").newFont(80));
-        } catch (Exception e) {
-            gameOverBanner.setFont(Font.font(80));
-        }
+        try { gameOverBanner.setFont(getAssetLoader().loadFont("HYPixel11pxU-2.ttf").newFont(80)); }
+        catch (Exception e) { gameOverBanner.setFont(Font.font(80)); }
         gameOverBanner.setFill(Color.BROWN);
         gameOverBanner.setStroke(Color.BLACK);
         gameOverBanner.setStrokeWidth(3);
-        gameOverBanner.setEffect(new DropShadow(15, Color.BLACK));
         gameOverBanner.setVisible(false);
-        addUINode(gameOverDimmingRect);
         addUINode(gameOverBanner);
 
-        if (isCustomMode) {
-            // 如果是排局模式（无论是刚进还是玩了一半），根据 isSettingUp 决定显示哪个 UI
-            if (isSettingUp) {
-                initSetupUI();
-            } else {
-                initStandardGameUI();
-            }
+        if (isOnlineLaunch) {
+            initOnlineGameUI();
+        } else if (isCustomMode) {
+            if (isSettingUp) initSetupUI();
+            else initStandardGameUI();
         } else {
             initStandardGameUI();
         }
     }
 
+    /**
+     * 【新增】标准模式 UI (含 AI 面板)
+     */
     private void initStandardGameUI() {
-        double uiX = BOARD_START_X + BOARD_WIDTH + UI_GAP - 20;
-
+        // 右侧
+        double rightX = BOARD_START_X + BOARD_WIDTH + UI_GAP - 20;
         var btnUndo = new PixelatedButton("悔棋", "Button1", () -> { if (boardController != null) boardController.undo(); });
         var btnSurrender = new PixelatedButton("投降", "Button1", () -> { if (boardController != null) boardController.surrender(); });
         var btnSave = new PixelatedButton("保存游戏", "Button1", this::openSaveDialog);
-
-        // --- 【新增】重新开始按钮 ---
         var btnRestart = new PixelatedButton("重新开始", "Button1", this::handleRestartGame);
-
         var btnHistory = new PixelatedButton("历史记录", "Button1", () -> getGameController().gotoGameMenu());
-
-        // 将 restart 按钮加入布局
         standardGameUI = new VBox(10, btnUndo, btnSave, btnRestart, btnSurrender, btnHistory);
+        addUINode(standardGameUI, rightX, 50);
 
-        addUINode(standardGameUI, uiX, 50);
+        // 左侧 (AI)
+        double leftX = BOARD_START_X - UI_GAP - UI_WIDTH;
+        double safeLeftX = Math.max(20, leftX);
+
+        var btnToggleAI = new PixelatedButton("AI: 关闭", "Button1", null);
+        btnToggleAI.setOnMouseClicked(e -> {
+            isAIEnabled = !isAIEnabled;
+            ((Text)btnToggleAI.getChildren().get(1)).setText(isAIEnabled ? "AI: 开启" : "AI: 关闭");
+            if (isAIEnabled && !model.isRedTurn() && boardController != null) boardController.startAITurn();
+        });
+
+        var btnHint = new PixelatedButton("AI 提示", "Button1", () -> {
+            if (boardController != null) boardController.requestAIHint();
+        });
+
+        leftGameUI = new VBox(10, btnToggleAI, btnHint);
+        addUINode(leftGameUI, safeLeftX, 50);
 
         turnIndicator = new TurnIndicator();
         turnIndicator.update(model.isRedTurn(), false);
+        addUINode(turnIndicator, rightX, 750);
+    }
+
+    /**
+     * 【新增】联机模式 UI
+     */
+    private void initOnlineGameUI() {
+        double uiX = BOARD_START_X + BOARD_WIDTH + UI_GAP - 20;
+        var btnUndo = new PixelatedButton("申请悔棋", "Button1", () -> { if (boardController != null) boardController.undoOnline(); });
+        var btnRestart = new PixelatedButton("申请重开", "Button1", () -> { if (boardController != null) boardController.restartOnline(); });
+        var btnSwap = new PixelatedButton("交换先手", "Button1", () -> { if (boardController != null) boardController.swapOnline(); });
+        var btnSurrender = new PixelatedButton("投降 / 退出", "Button1", () -> { if (boardController != null) boardController.surrenderOnline(); });
+        var btnExit = new PixelatedButton("返回大厅", "Button1", () -> getGameController().gotoMainMenu());
+
+        standardGameUI = new VBox(10, btnUndo, btnRestart, btnSwap, btnSurrender, btnExit);
+        addUINode(standardGameUI, uiX, 50);
+
+        turnIndicator = new TurnIndicator();
+        turnIndicator.update(true, false);
         addUINode(turnIndicator, uiX, 750);
     }
 
-    // --- 【新增】处理重新开始逻辑 ---
     private void handleRestartGame() {
         getDialogService().showConfirmationBox("确定要重新开始吗？", yes -> {
             if (yes) {
                 if (isCustomMode && customSetupSnapshot != null) {
-                    // 排局模式：标记为重置自定义，并开始新游戏
                     isRestartingCustom = true;
                     getGameController().startNewGame();
                 } else {
-                    // 标准模式：普通重开
-                    isCustomMode = false;
-                    isLoadedGame = false;
+                    isCustomMode = false; isLoadedGame = false;
                     getGameController().startNewGame();
                 }
             }
         });
     }
 
-    // --- 排局 UI 构建 ---
     private void initSetupUI() {
-        double leftPanelX = BOARD_START_X - UI_GAP - UI_WIDTH;
-        double safeLeftX = Math.max(20, leftPanelX);
+        double leftX = Math.max(20, BOARD_START_X - UI_GAP - UI_WIDTH);
         leftSetupPanel = createPiecePalette(true);
-        leftSetupPanel.setTranslateX(safeLeftX);
-        leftSetupPanel.setTranslateY(50);
+        leftSetupPanel.setTranslateX(leftX); leftSetupPanel.setTranslateY(50);
 
-        double rightPanelX = BOARD_START_X + BOARD_WIDTH + UI_GAP;
+        double rightX = BOARD_START_X + BOARD_WIDTH + UI_GAP;
         rightSetupPanel = createPiecePalette(false);
-        rightSetupPanel.setTranslateX(rightPanelX);
-        rightSetupPanel.setTranslateY(50);
+        rightSetupPanel.setTranslateX(rightX); rightSetupPanel.setTranslateY(50);
 
-        // 左下角：保存排局 + 先手选择
-
-
+        // 橡皮擦
         PixelatedButton btnEraser = new PixelatedButton("橡皮擦", "Button1", () -> {
-            leftSetupPanel.getChildren().stream().filter(n -> n instanceof Button).forEach(n -> n.setStyle("-fx-background-color: transparent; -fx-border-color: transparent;"));
-            rightSetupPanel.getChildren().stream().filter(n -> n instanceof Button).forEach(n -> n.setStyle("-fx-background-color: transparent; -fx-border-color: transparent;"));
-
-            this.selectedPieceType = "Eraser";
-            this.selectedPieceIsRed = false;
-            getDialogService().showMessageBox("已进入橡皮擦模式\n点击棋子即可删除");
+            resetPaletteStyles();
+            this.selectedPieceType = "Eraser"; this.selectedPieceIsRed = false;
+            getDialogService().showMessageBox("橡皮擦模式：点击棋子删除");
         });
-        btnEraser.setScaleX(0.6);
-        btnEraser.setScaleY(0.6);
+        btnEraser.setScaleX(0.9); btnEraser.setScaleY(0.9);
 
+        // 先手选择
         ToggleGroup turnGroup = new ToggleGroup();
         ToggleButton rbRedFirst = createStyledToggleButton("红先", true);
         ToggleButton rbBlackFirst = createStyledToggleButton("黑先", false);
-        rbRedFirst.setToggleGroup(turnGroup);
-        rbBlackFirst.setToggleGroup(turnGroup);
-        rbRedFirst.setSelected(true);
+        rbRedFirst.setToggleGroup(turnGroup); rbBlackFirst.setToggleGroup(turnGroup); rbRedFirst.setSelected(true);
 
         Label turnLabel = new Label("先手选择");
-        turnLabel.setFont(gameFont);
-        turnLabel.setTextFill(Color.WHITE);
-        turnLabel.setStyle("-fx-effect: dropshadow(one-pass-box, black, 2, 0, 1, 1);");
+        turnLabel.setFont(gameFont); turnLabel.setTextFill(Color.WHITE);
 
-        turnSelectionPanel = new VBox(10, btnEraser, turnLabel, rbRedFirst, rbBlackFirst);
-        turnSelectionPanel.setAlignment(Pos.CENTER_LEFT);
-        turnSelectionPanel.setTranslateX(safeLeftX);
-        turnSelectionPanel.setTranslateY(APP_HEIGHT - 320);
-
-        // 右侧控制区
+        // 保存排局
         PixelatedButton btnSaveSetup = new PixelatedButton("保存排局", "Button1", this::openSaveDialog);
-        btnSaveSetup.setScaleX(0.6);
-        btnSaveSetup.setScaleY(0.6);
+        btnSaveSetup.setScaleX(0.9); btnSaveSetup.setScaleY(0.9);
 
+        turnSelectionPanel = new VBox(10, btnSaveSetup, btnEraser, turnLabel, rbRedFirst, rbBlackFirst);
+        turnSelectionPanel.setAlignment(Pos.CENTER_LEFT);
+        turnSelectionPanel.setTranslateX(leftX);
+        turnSelectionPanel.setTranslateY(APP_HEIGHT - 350); // 上移一点
+
+        // 开始按钮
         PixelatedButton btnStartCustom = new PixelatedButton("开始对局", "Button1", () -> {
             boolean isRedFirst = rbRedFirst.isSelected();
             tryStartCustomGame(isRedFirst);
         });
-        btnStartCustom.setScaleX(0.6);
-        btnStartCustom.setScaleY(0.6);
 
+        Label hintLabel = new Label("提示：\n左红右黑\n点击放置");
+        hintLabel.setFont(gameFont); hintLabel.setTextFill(Color.WHITE);
 
-        Label hintLabel = new Label("操作提示:\n1.选择棋子放置\n2.点击同类棋子删除\n3.使用橡皮擦清除");
-        try {
-            hintLabel.setFont(getAssetLoader().loadFont("HYPixel11pxU-2.ttf").newFont(16));
-        } catch (Exception e) {
-            hintLabel.setFont(Font.font(16));
-        }
-        hintLabel.setStyle("-fx-text-fill: white; -fx-padding: 10; -fx-background-color: rgba(0,0,0,0.5); -fx-background-radius: 5;");
-        hintLabel.setWrapText(true);
-        hintLabel.setPrefWidth(UI_WIDTH);
-
-        VBox controlBox = new VBox(-25, hintLabel, btnSaveSetup, btnStartCustom);
+        VBox controlBox = new VBox(15, hintLabel, btnStartCustom);
         controlBox.setAlignment(Pos.CENTER);
         controlBox.setStyle("-fx-padding: 30 0 0 0;");
         rightSetupPanel.getChildren().add(controlBox);
 
-        addUINode(leftSetupPanel);
-        addUINode(rightSetupPanel);
-        addUINode(turnSelectionPanel);
-    }
-
-    private ToggleButton createStyledToggleButton(String text, boolean isRed) {
-        ToggleButton tb = new ToggleButton(text);
-        tb.setFont(gameFont);
-        tb.setPrefWidth(UI_WIDTH * 0.8);
-        String baseColor = "#D2B48C";
-        String selectedColor = isRed ? "#FF6666" : "#666666";
-        String commonStyle = "-fx-background-radius: 0; -fx-border-color: #5C3A1A; -fx-border-width: 2px; -fx-text-fill: black;";
-        tb.setStyle("-fx-base: " + baseColor + "; " + commonStyle);
-
-        tb.selectedProperty().addListener((obs, oldVal, newVal) -> {
-            if (newVal) {
-                tb.setStyle("-fx-base: " + selectedColor + "; " + commonStyle + "-fx-text-fill: white;");
-            } else {
-                tb.setStyle("-fx-base: " + baseColor + "; " + commonStyle);
-            }
-        });
-        return tb;
-    }
-
-    private VBox createPiecePalette(boolean isRed) {
-        VBox box = new VBox(10);
-        box.setAlignment(Pos.TOP_CENTER);
-        box.setPrefWidth(UI_WIDTH);
-
-        String colorName = isRed ? "红方" : "黑方";
-        Label title = new Label(colorName + "棋库");
-        title.setFont(gameFont);
-        title.setTextFill(isRed ? Color.web("#ff3333") : Color.web("#333333"));
-        title.setStyle("-fx-padding: 5 15; -fx-background-color: rgba(255,255,255,0.7); -fx-background-radius: 10;");
-        box.getChildren().add(title);
-
-        String[] types = {"General", "Advisor", "Elephant", "Horse", "Chariot", "Cannon", "Soldier"};
-
-        for (String type : types) {
-            String colorPrefix = isRed ? "Red" : "Black";
-            String textureName = colorPrefix + type + ".png";
-            ImageView pieceImage;
-            try {
-                pieceImage = new ImageView(getAssetLoader().loadTexture(textureName).getImage());
-                pieceImage.setFitWidth(55);
-                pieceImage.setFitHeight(55);
-                pieceImage.setPreserveRatio(true);
-            } catch (Exception e) {
-                System.err.println("无法加载棋子图片用于UI: " + textureName);
-                pieceImage = null;
-            }
-
-            Button btn = new Button();
-            btn.setPrefWidth(70);
-            btn.setPrefHeight(70);
-
-            if (pieceImage != null) {
-                btn.setGraphic(pieceImage);
-                btn.setStyle("-fx-background-color: transparent; -fx-border-color: transparent; -fx-border-width: 2; -fx-border-radius: 5;");
-                btn.setOnAction(e -> {
-                    leftSetupPanel.getChildren().stream().filter(n -> n instanceof Button).forEach(n -> n.setStyle("-fx-background-color: transparent; -fx-border-color: transparent;"));
-                    rightSetupPanel.getChildren().stream().filter(n -> n instanceof Button).forEach(n -> n.setStyle("-fx-background-color: transparent; -fx-border-color: transparent;"));
-                    btn.setStyle("-fx-background-color: rgba(255,255,0,0.3); -fx-border-color: yellow; -fx-border-width: 2; -fx-border-radius: 5;");
-                    this.selectedPieceType = type;
-                    this.selectedPieceIsRed = isRed;
-                    FXGL.play("按钮音效1.mp3");
-                });
-            } else {
-                btn.setText(type);
-            }
-            box.getChildren().add(btn);
-        }
-        return box;
+        addUINode(leftSetupPanel); addUINode(rightSetupPanel); addUINode(turnSelectionPanel);
     }
 
     private void tryStartCustomGame(boolean isRedFirst) {
+        // 飞将校验
         AbstractPiece redKing = model.FindKing(true);
         AbstractPiece blackKing = model.FindKing(false);
-
         if (redKing == null || blackKing == null) {
-            getDialogService().showMessageBox("必须各有一个将/帅！");
-            return;
+            getDialogService().showMessageBox("红黑双方必须各有一将！"); return;
         }
         if (redKing.getCol() == blackKing.getCol()) {
-            int minRow = Math.min(redKing.getRow(), blackKing.getRow());
-            int maxRow = Math.max(redKing.getRow(), blackKing.getRow());
-            boolean hasBlocker = false;
-            for (int r = minRow + 1; r < maxRow; r++) {
-                if (model.getPieceAt(r, redKing.getCol()) != null) {
-                    hasBlocker = true;
-                    break;
-                }
+            boolean blocked = false;
+            for(int r = Math.min(redKing.getRow(), blackKing.getRow()) + 1; r < Math.max(redKing.getRow(), blackKing.getRow()); r++) {
+                if (model.getPieceAt(r, redKing.getCol()) != null) { blocked = true; break; }
             }
-            if (!hasBlocker) {
-                getDialogService().showMessageBox("规则错误：\n将帅不能直接照面（飞将）！\n请在中间添加棋子或移动位置。");
-                return;
-            }
+            if (!blocked) { getDialogService().showMessageBox("将帅不能照面（飞将）！"); return; }
         }
 
-        // 【核心】保存当前排局的快照，以便重新开始时恢复
         this.customSetupSnapshot = deepCopy(model);
-
-        removeUINode(leftSetupPanel);
-        removeUINode(rightSetupPanel);
-        removeUINode(turnSelectionPanel);
+        removeUINode(leftSetupPanel); removeUINode(rightSetupPanel); removeUINode(turnSelectionPanel);
 
         model.setRedTurn(isRedFirst);
         this.isSettingUp = false;
         this.selectedPieceType = null;
 
         initStandardGameUI();
-
         turnIndicator.update(isRedFirst, false);
-        getDialogService().showMessageBox("排局开始！\n由 " + (isRedFirst ? "红方" : "黑方") + " 先行。");
+
+        getDialogService().showMessageBox("排局开始！", () -> {
+            if (!isRedFirst && isAIEnabled && boardController != null) {
+                boardController.startAITurn();
+            }
+        });
     }
 
-    // --- 【新增】深拷贝工具方法 ---
+    // --- 辅助方法 ---
+    private ToggleButton createStyledToggleButton(String text, boolean isRed) {
+        ToggleButton tb = new ToggleButton(text);
+        tb.setFont(gameFont); tb.setPrefWidth(UI_WIDTH * 0.8);
+        String base = "#D2B48C"; String sel = isRed ? "#FF6666" : "#666666";
+        String style = "-fx-background-radius: 0; -fx-border-color: #5C3A1A; -fx-border-width: 2px; -fx-text-fill: black;";
+        tb.setStyle("-fx-base: " + base + ";" + style);
+        tb.selectedProperty().addListener((o, old, val) -> tb.setStyle("-fx-base: " + (val ? sel : base) + ";" + style));
+        return tb;
+    }
+
+    private VBox createPiecePalette(boolean isRed) {
+        VBox box = new VBox(10); box.setAlignment(Pos.TOP_CENTER); box.setPrefWidth(UI_WIDTH);
+        Label title = new Label(isRed?"红方":"黑方"); title.setFont(gameFont); title.setTextFill(isRed?Color.RED:Color.BLACK);
+        box.getChildren().add(title);
+        String[] types = {"General", "Advisor", "Elephant", "Horse", "Chariot", "Cannon", "Soldier"};
+        for (String type : types) {
+            String prefix = isRed ? "Red" : "Black";
+            ImageView img = new ImageView(FXGL.getAssetLoader().loadTexture(prefix + type + ".png").getImage());
+            img.setFitWidth(55); img.setPreserveRatio(true);
+            Button btn = new Button("", img);
+            btn.setStyle("-fx-background-color: transparent;");
+            btn.setOnAction(e -> {
+                resetPaletteStyles();
+                btn.setStyle("-fx-background-color: rgba(255,255,0,0.3);");
+                this.selectedPieceType = type; this.selectedPieceIsRed = isRed;
+                FXGL.play("按钮音效1.mp3");
+            });
+            box.getChildren().add(btn);
+        }
+        return box;
+    }
+
+    private void resetPaletteStyles() {
+        if(leftSetupPanel!=null) leftSetupPanel.getChildren().forEach(n->n.setStyle("-fx-background-color: transparent;"));
+        if(rightSetupPanel!=null) rightSetupPanel.getChildren().forEach(n->n.setStyle("-fx-background-color: transparent;"));
+    }
+
     private ChessBoardModel deepCopy(ChessBoardModel original) {
         try {
             ByteArrayOutputStream bos = new ByteArrayOutputStream();
             ObjectOutputStream oos = new ObjectOutputStream(bos);
             oos.writeObject(original);
-            oos.flush();
-            ByteArrayInputStream bis = new ByteArrayInputStream(bos.toByteArray());
-            ObjectInputStream ois = new ObjectInputStream(bis);
-            return (ChessBoardModel) ois.readObject();
-        } catch (Exception e) {
-            e.printStackTrace();
-            return null;
-        }
+            return (ChessBoardModel) new ObjectInputStream(new ByteArrayInputStream(bos.toByteArray())).readObject();
+        } catch (Exception e) { return null; }
     }
 
-    // --- 存档功能 ---
-    private void saveGameToSlot(int slotIndex) {
-        File dir = new File(SAVE_DIR);
-        if (!dir.exists()) {
-            dir.mkdirs();
-        }
-
-        String filename = SAVE_DIR + currentUser + "_save_" + slotIndex + ".dat";
-        try (ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream(filename))) {
-            oos.writeObject(model);
-            getDialogService().showMessageBox("成功保存到：存档 " + slotIndex);
-        }
-        catch (IOException e) {
-            e.printStackTrace();
-            getDialogService().showMessageBox("存档失败：" + e.getMessage());
-        }
+    // --- 存档读档 ---
+    private void saveGameToSlot(int slot) {
+        new File(SAVE_DIR).mkdirs();
+        try (ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream(SAVE_DIR + currentUser + "_save_" + slot + ".dat"))) {
+            oos.writeObject(model); getDialogService().showMessageBox("保存成功");
+        } catch (Exception e) {}
     }
-
     public void openSaveDialog() {
-        // 【新增】游客限制
-        if (isGuestMode) {
-            getDialogService().showMessageBox("游客模式无法保存存档。\n请注册/登录账号后使用。");
-            return;
-        }
-
-        getDialogService().showChoiceBox("请选择保存位置",
-                java.util.Arrays.asList("存档 1", "存档 2", "存档 3"),
-                selected -> {
-                    int slot = Integer.parseInt(selected.replace("存档 ", ""));
-                    saveGameToSlot(slot);
-                }
-        );
+        if (isGuestMode) { getDialogService().showMessageBox("游客无法存档"); return; }
+        getDialogService().showChoiceBox("选择位置", List.of("存档 1", "存档 2", "存档 3"), s -> saveGameToSlot(Integer.parseInt(s.split(" ")[1])));
     }
-
-    // --- 读档功能 ---
-    private void loadGameFromSlot(int slotIndex) {
-        String filename = SAVE_DIR + currentUser + "_save_" + slotIndex + ".dat";
-        File file = new File(filename);
-        if (!file.exists()) {
-            getDialogService().showMessageBox("错误：存档 " + slotIndex + " 不存在！");
-            return;
-        }
-        try (ObjectInputStream ois = new ObjectInputStream(new FileInputStream(file))) {
-            ChessBoardModel loadedModel = (ChessBoardModel) ois.readObject();
-            loadedModel.rebuildAfterLoad();
-            this.model = loadedModel;
-            this.isCustomMode = false;
-            this.isLoadedGame = true;
-            getGameController().startNewGame();
-        } catch (Exception e) {
-            e.printStackTrace();
-            getDialogService().showMessageBox("读取失败：" + e.getMessage());
-        }
+    private void loadGameFromSlot(int slot) {
+        try (ObjectInputStream ois = new ObjectInputStream(new FileInputStream(SAVE_DIR + currentUser + "_save_" + slot + ".dat"))) {
+            ChessBoardModel m = (ChessBoardModel) ois.readObject(); m.rebuildAfterLoad();
+            this.model = m; this.isCustomMode = false; this.isLoadedGame = true; getGameController().startNewGame();
+        } catch (Exception e) { getDialogService().showMessageBox("读取失败"); }
     }
-
     public void openLoadDialog() {
-        // 【新增】游客限制
-        if (isGuestMode) {
-            getDialogService().showMessageBox("游客模式无法读取存档。");
-            return;
-        }
-
-        // 只检查当前用户的存档
-        List<String> availableSlots = new ArrayList<>();
-        for (int i = 1; i <= 3; i++) {
-            String path = SAVE_DIR + currentUser + "_save_" + i + ".dat";
-            if (new File(path).exists()) {
-                availableSlots.add("存档 " + i);
-            }
-        }
-
-        if (availableSlots.isEmpty()) {
-            getDialogService().showMessageBox("没有找到 " + currentUser + " 的任何存档记录。");
-            return;
-        }
-
-        getDialogService().showChoiceBox("请选择读取位置", availableSlots, selected -> {
-            int slot = Integer.parseInt(selected.replace("存档 ", ""));
-            loadGameFromSlot(slot);
-        });
+        if (isGuestMode) { getDialogService().showMessageBox("游客无法读档"); return; }
+        List<String> slots = new ArrayList<>();
+        for (int i=1; i<=3; i++) if (new File(SAVE_DIR + currentUser + "_save_" + i + ".dat").exists()) slots.add("存档 " + i);
+        if (slots.isEmpty()) { getDialogService().showMessageBox("无存档"); return; }
+        getDialogService().showChoiceBox("读取位置", slots, s -> loadGameFromSlot(Integer.parseInt(s.split(" ")[1])));
     }
-
     public boolean hasSaveFile() {
         if (isGuestMode) return false;
-        return new File(SAVE_DIR + currentUser + "_save_1.dat").exists() ||
-                new File(SAVE_DIR + currentUser + "_save_2.dat").exists() ||
-                new File(SAVE_DIR + currentUser + "_save_3.dat").exists();
+        for (int i=1; i<=3; i++) if (new File(SAVE_DIR + currentUser + "_save_" + i + ".dat").exists()) return true;
+        return false;
     }
 
-    @Override
-    protected void initInput() {
-        Input input = getInput();
-        UserAction clickAction = new UserAction("Click") {
-            @Override
-            protected void onActionEnd() {
-                if (inputHandler != null) {
-                    inputHandler.handleMouseClick(input.getMousePositionWorld());
-                }
-            }
-        };
-        input.addAction(clickAction, MouseButton.PRIMARY);
+    @Override protected void initInput() {
+        getInput().addAction(new UserAction("Click") {
+            @Override protected void onActionEnd() { if (inputHandler != null) inputHandler.handleMouseClick(getInput().getMousePositionWorld()); }
+        }, MouseButton.PRIMARY);
     }
 
-    public static void main(String[] args) { launch(args); }
+    public static void main(String[] args) {
+        new Thread(() -> { try { edu.sustech.xiangqi.server.XiangQiServer.main(null); } catch (Exception e) {} }).start();
+        launch(args);
+    }
 }
